--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build && mkdir -p build/public",
     "build-babel": "babel ./src -d ./build/src --copy-files",
-    "build": "npm run clean && npm run build-babel",
+    "copy-env": "cp .env build/.env",
+    "build": "npm run clean && npm run build-babel && copy-env",
     "production": "node ./build/src/app.js",
     "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js"
   },
