--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf build && mkdir -p build/public",
     "build-babel": "babel ./src -d ./build/src --copy-files",
     "copy-env": "cp .env build/.env",
-    "build": "npm run clean && npm run build-babel && copy-env",
+    "build": "npm run clean && npm run build-babel && npm run copy-env",
     "production": "node ./build/src/app.js",
     "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
     "migrate": "cd src && sequelize-cli db:migrate",
