--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "production": "node ./build/src/app.js",
     "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
     "migrate": "cd src && sequelize-cli db:migrate",
-    "seed": "cd src && sequelize-cli db:seed:all"
+    "migrate:undo": "cd src && sequelize-cli db:migrate:undo:all",
+    "seed": "cd src && sequelize-cli db:seed:all",
+    "seed:undo": "cd src && sequelize-cli db:seed:undo:all"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.25.7",
