--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf build && mkdir -p build/public",
+    "clean": "rm -rf build",
     "build-babel": "babel ./src -d ./build/src --copy-files",
     "copy-env": "cp .env build/.env",
-    "copy-public": "cp -r public publicTest",
-    "build": "npm run clean && npm run build-babel && npm run copy-env && npm run copy-public",
+    "build": "npm run clean && npm run build-babel && npm run copy-env",
     "production": "node ./build/src/app.js",
     "dev": "nodemon --exec ./node_modules/.bin/babel-node ./src/app.js",
     "migrate": "cd src && sequelize-cli db:migrate",
